force-app/src/objects/Contact_Job_Category_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Affiliation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Job Category Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Current_Value__c</columns>
        <columns>New_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Job Category Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Job Category Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>